# tidex6

./: .dockerignore  .gitignore  .gitignore_local  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.ru.md  ROADMAP_CHECK.md  SECURITY.md  SECURITY_UPDATES.md  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
brand/: BRANDBOOK.md  README.md
brand/components/: HatLogo.jsx  HatLogo.tsx
brand/solscan/: README.md
crates/tidex6-circuits/: Cargo.toml
crates/tidex6-circuits/artifacts/: withdraw.wtns  withdraw_vk_ceremony.json
crates/tidex6-circuits/ceremony/: withdraw_genesis.state
crates/tidex6-circuits/src/: ceremony.rs  circom_qap.rs  deposit.rs  lib.rs  mpc.rs  poseidon_gadget.rs  solana_bytes.rs  square.rs  withdraw.rs  zkey.rs
crates/tidex6-circuits/tests/: deposit_end_to_end.rs  poseidon_gadget_equivalence.rs  square_end_to_end.rs  withdraw_end_to_end.rs
crates/tidex6-cli/: Cargo.toml
crates/tidex6-cli/src/: common.rs  main.rs
crates/tidex6-cli/src/commands/: accountant.rs  deposit.rs  keygen.rs  mod.rs  receive.rs  refund.rs  withdraw.rs
crates/tidex6-client/: Cargo.toml
crates/tidex6-client/src/: accountant.rs  deposit.rs  lib.rs  pool.rs  refund.rs  withdraw.rs
crates/tidex6-confidential/: Cargo.toml
crates/tidex6-confidential/artifacts/: withdraw_vk.rs
crates/tidex6-confidential/src/: bytes.rs  lib.rs  onchain.rs  transfer.rs  withdraw.rs
crates/tidex6-confidential/tests/: roundtrip.rs
crates/tidex6-core/: Cargo.toml
crates/tidex6-core/examples/: show_note.rs
crates/tidex6-core/fuzz/: Cargo.toml
crates/tidex6-core/fuzz/fuzz_targets/: fuzz_merkle.rs  fuzz_note_parse.rs  fuzz_poseidon.rs
crates/tidex6-core/src/: elgamal.rs  envelope.rs  keys.rs  lib.rs  memo.rs  merkle.rs  network.rs  note.rs  poseidon.rs  pqc.rs  types.rs  viewtag.rs
crates/tidex6-core/tests/: deposit_note.rs  domain_types.rs  merkle_tree.rs  poseidon_equivalence.rs  property_tests.rs
crates/tidex6-ct-lab/: Cargo.toml
crates/tidex6-ct-lab/src/: config.rs  ct.rs  flow.rs  lib.rs  main.rs  pool.rs
crates/tidex6-ct-wasm-probe/: Cargo.toml
crates/tidex6-ct-wasm-probe/src/: lib.rs
crates/tidex6-day1/: Cargo.toml
crates/tidex6-day1/src/: main.rs
crates/tidex6-indexer/: Cargo.toml
crates/tidex6-indexer/src/: lib.rs  rebuild.rs
crates/tidex6-notifier-client/: Cargo.toml
crates/tidex6-notifier-client/src/: client.rs  ipc.rs  lib.rs  types.rs
crates/tidex6-prover-wasm/: Cargo.toml  README.md  build-reproducible.sh  rust-toolchain.toml
crates/tidex6-prover-wasm/src/: lib.rs
crates/tidex6-ui-shared/: Cargo.toml
crates/tidex6-ui-shared/assets/css/: base.css  footer.css  tokens.css
crates/tidex6-ui-shared/assets/templates/partials/: footer.html
crates/tidex6-ui-shared/src/: lib.rs
crates/tidex6-wusdc-cli/: Cargo.toml
docs/: CEREMONY_FINALIZE_RUNBOOK.md  REVIEW_AND_RECOMMENDATIONS.md  STRATEGIC_QA_ROUND2.md  compass_artifact_wf-1e531ad9-6ae8-4e94-b0a9-b94093851d70_text_markdown.md
docs/release/: CEREMONY.md  PROJECT_BRIEF.md  PR_CHECKLIST_PROOF_LOGIC.md  REPRODUCIBLE.md  ROADMAP.md  THE_LEGEND.md  security.md
docs/release/adr/: ADR-001-commitment-scheme.md  ADR-002-merkle-tree-storage.md  ADR-003-nullifier-storage.md  ADR-004-elgamal-bn254.md  ADR-005-non-upgradeable-verifier.md  ADR-006-no-proc-macros.md  ADR-007-killer-features.md  ADR-008-pool-isolation.md  ADR-009-proving-time-budget.md  ADR-010-memo-transport-via-spl-memo.md  ADR-011-relayer-architecture.md  ADR-012-opaque-note-envelope-memo.md  ADR-013-browser-side-proof-generation.md  ADR-014-mlkem-memo-account.md  ADR-015-confidential-amounts-two-layer.md  ADR-015-confidential-amounts-two-layers.md  ADR-016-fee-monetization.md  ADR-017-public-ceremony-finalization.md  README.md
docs/release/ru/: CEREMONY.md  PROJECT_BRIEF.md  PR_CHECKLIST_PROOF_LOGIC.md  ROADMAP.md  THE_LEGEND.md  security.md
docs/release/ru/adr/: ADR-001-commitment-scheme.md  ADR-002-merkle-tree-storage.md  ADR-003-nullifier-storage.md  ADR-004-elgamal-bn254.md  ADR-005-non-upgradeable-verifier.md  ADR-006-no-proc-macros.md  ADR-007-killer-features.md  ADR-008-pool-isolation.md  ADR-009-proving-time-budget.md  ADR-010-memo-transport-via-spl-memo.md  ADR-011-relayer-architecture.md  ADR-015-confidential-amounts-two-layer.md  README.md
docs/release/spec/: ACCOUNTANT_WEB_SPEC.md
examples/confidential-amount-demo/: Cargo.toml
examples/confidential-amount-demo/src/: altbn128.rs  lib.rs  main.rs  pedersen.rs  state.rs
examples/private-payroll/: Cargo.toml  README.md
examples/private-payroll/scripts/: run_demo.sh
programs/tidex6-caller/: Cargo.toml
programs/tidex6-caller/src/: lib.rs
programs/tidex6-confidential-amounts/: Cargo.toml  program-keypair.json
programs/tidex6-confidential-amounts/src/: lib.rs
programs/tidex6-confidential-pool/: Cargo.toml
programs/tidex6-confidential-pool/src/: lib.rs  pool.rs  transfer_vk.rs
programs/tidex6-tip-jar/: Cargo.toml  README.md
programs/tidex6-tip-jar/src/: lib.rs
programs/tidex6-verifier/: Cargo.toml
programs/tidex6-verifier-v2/: Cargo.toml
programs/tidex6-verifier-v2/src/: lib.rs  pool.rs
programs/tidex6-verifier/src/: groth16_test_vectors.rs  lib.rs  pool.rs  withdraw_vk.rs
programs/tidex6-wusdc-pool/: Cargo.toml
programs/tidex6-wusdc-pool/src/: lib.rs  pool.rs
style-guide/: STYLE_GUIDE.md  tidex6.jsx
video/: DEMO_VIDEO_SCRIPT.md  DEMO_VOICEOVER_RU.md  DEMO_WEB_RECORDING_SCRIPT.md  FINAL_DEMO_SCRIPT_RU.md  FINAL_DEMO_YOUTUBE.md  PITCH_VIDEO_SCRIPT.md  PITCH_VIDEO_SCRIPT_RU.md  PROGRESS_VIDEOS.md  WEEK-4_PROGRESS_SCRIPT_RU.md
web/static/css/: base.css  layout.css  tokens.css
web/static/css/components/: buttons.css  cards.css  code-block.css  footer.css  header.css
web/static/css/pages/: home.css
web/static/js/: main.js
web/templates/: base.html
web/templates/pages/: home.html
web/templates/partials/: footer.html  head.html  header.html
