# tidex6 — Rust-native privacy framework for Solana
#
# Workspace root. Member crates live under crates/.
# See docs/release/PROJECT_BRIEF.md section 7 for the full planned layout.

[workspace]
# resolver "3" is the default for Rust 2024 edition, but the Anchor CLI
# bundles an older Cargo that does not recognise it. We use "2" which
# works with 2024 edition and is understood by both cargo and anchor.
resolver = "2"
exclude = [
    # cargo-fuzz crates have their own Cargo.toml and are built
    # separately with `cargo +nightly fuzz run`. They must NOT be
    # in the workspace members list or the normal `cargo build`
    # would try to compile them and fail on stable.
    "crates/tidex6-core/fuzz",
]
members = [
    "crates/tidex6-circuits",
    "crates/tidex6-cli",
    "crates/tidex6-client",
    "crates/tidex6-core",
    "crates/tidex6-day1",
    "crates/tidex6-indexer",
    "crates/tidex6-notifier-client",
    "crates/tidex6-ui-shared",
    "examples/confidential-amount-demo",
    "examples/private-payroll",
    "programs/tidex6-caller",
    "programs/tidex6-confidential-amounts",
    "programs/tidex6-verifier",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "2.5.12"
license = "MIT OR Apache-2.0"
authors = ["tidex6 contributors"]
repository = "https://github.com/koshak01/tidex6"
readme = "README.md"
keywords = ["solana", "privacy", "zero-knowledge", "groth16", "anchor"]
categories = ["cryptography"]

# Shared dependency versions used across member crates.
# Before adding any new dependency, check docs/release/PROJECT_BRIEF.md section 6.
[workspace.dependencies]
# Arkworks 0.5.x — zero-knowledge stack for BN254
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["r1cs", "crh", "merkle_tree", "sponge"] }
ark-r1cs-std = "0.5"
ark-relations = { version = "0.5", default-features = false }
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-ed-on-bn254 = "0.5"

# Hashing: circom-compatible Poseidon, byte-for-byte equivalent to the
# onchain solana-poseidon syscall. MUST use Poseidon::<Fr>::new_circom(n).
# See ADR-001 and docs/release/security.md section 2.2.
light-poseidon = "0.4"

# Onchain Poseidon, used in the verifier program and as the ground truth
# in the Day-1 Validation Checklist equivalence test.
solana-poseidon = "4"

# Groth16 verification on Solana via alt_bn128 syscalls. Used by the
# tidex6-verifier program for onchain proof verification.
groth16-solana = "0.2"

# Error handling per ~/.claude/rules/rust/error-handling.md:
# - library crates use thiserror
# - binary crates use anyhow
thiserror = "2"
anyhow = "1"

# Shielded Memo stack (ADR-007, ADR-010).
# aes-gcm is the RustCrypto AEAD used to encrypt per-deposit memos.
# sha2 backs the KDF from an ECDH shared secret to the AES key.
# base64 encodes the binary MemoPayload into the UTF-8 string that
# SPL Memo Program accepts as its instruction data.
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Anchor client and ecosystem — used by the Day-1 validation harness and
# by any future Rust-based integrator code. Version pinned to match the
# onchain anchor-lang version used in programs/tidex6-verifier.
anchor-client = "1.0.0"
anchor-lang = "1.0.0"

# Dev dependencies
criterion = "0.8"
proptest = "1"

# Lints applied to every member crate via `lints.workspace = true`.
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
wildcard_imports = "deny"
enum_glob_use = "deny"
todo = "warn"
unimplemented = "warn"

# Release profile tuned for onchain programs and prover binaries.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true

# Dev profile: keep overflow checks on so we catch arithmetic bugs early.
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
