[package]
name = "tidex6-client"
description = "tidex6 Rust SDK: high-level PrivatePool builder API for shielded deposits and withdrawals on Solana."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tidex6-core = { path = "../tidex6-core" }
tidex6-circuits = { path = "../tidex6-circuits" }
tidex6-indexer = { path = "../tidex6-indexer" }
tidex6-verifier = { path = "../../programs/tidex6-verifier", features = ["no-entrypoint"] }

anchor-client = { workspace = true }
anyhow = { workspace = true }

ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = "0.5"

solana-keypair = "3"
solana-rpc-client-api = "3"
solana-signature = "3"
solana-transaction-status = "3"

# ADR-011: via_relayer path posts the proof to an HTTP endpoint
# instead of signing the tx locally. reqwest::blocking keeps the
# synchronous API of WithdrawBuilder consistent — no runtime plumbing
# leaks into callers. rustls-tls avoids pulling in OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = { workspace = true }

[lints]
workspace = true
