[package]
name = "tidex6-core"
description = "Core primitives for the tidex6 privacy framework: commitments, nullifiers, Merkle tree, keys, Poseidon wrapper, ElGamal on BN254."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
light-poseidon = { workspace = true }
ark-bn254 = { workspace = true }

# Baby Jubjub curve on BN254's scalar field, used for the in-circuit
# ECDH that derives per-memo symmetric keys. See ADR-004 for the
# dual-curve rationale and `src/elgamal.rs` for the public API.
ark-ed-on-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }

# Shielded Memo stack (ADR-007, ADR-010). aes-gcm provides AES-256-GCM;
# sha2 is used inside the KDF; base64 encodes the binary payload into
# the ASCII form that SPL Memo Program accepts.
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# rand is used by `Secret::random`, `Nullifier::random`,
# `SpendingKey::random`, and `AuditorKeypair::generate` — the only
# ways tidex6 generates fresh cryptographic material offchain. The
# `sys_rng` feature pulls in `getrandom` so we can reach the OS-level
# CSPRNG through `SysRng`.
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng"] }

[dev-dependencies]
# solana-poseidon is a dev-dependency here because tidex6-core is a
# pure-primitives library and must not pull in Solana machinery at the
# public API surface. It is used in `tests/poseidon_equivalence.rs` as
# the ground truth for the Day-1 Validation Checklist.
solana-poseidon = { workspace = true }
# proptest is used in `tests/property_tests.rs` for Day-20 security
# hardening: randomised invariant checking across 10k+ inputs for
# every core primitive.
proptest = { workspace = true }

[lints]
workspace = true
