[package]
name = "tidex6-indexer"
description = "Rebuilds the tidex6 shielded-pool Merkle tree offchain by replaying on-chain deposit event logs."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tidex6-core = { path = "../tidex6-core" }

anchor-client = { workspace = true }
thiserror = { workspace = true }

# Solana crates pinned to the same 3.x series as the rest of the
# offchain stack. Mixing with 4.x produces two copies of the same
# types in the dep graph and breaks compilation.
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-signature = "3"
solana-transaction-status = "3"

hex = "0.4"

[lints]
workspace = true
