[package]
name = "tidex6-example-private-payroll"
description = "Flagship tidex6 example: Lena sends monthly support to her parents with a private, auditor-friendly shielded pool."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "accountant"
path = "src/bin/accountant.rs"

[dependencies]
tidex6-core = { path = "../../crates/tidex6-core" }
tidex6-client = { path = "../../crates/tidex6-client" }

anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

solana-keypair = "3"

[lints]
workspace = true
