[package]
name = "tidex6-caller"
description = "Day-1 Validation Checklist Gate 4: proves Anchor 1.0 CPI with proof data works onchain by forwarding a Groth16 proof to tidex6-verifier."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "tidex6_caller"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
tidex6-verifier = { path = "../tidex6-verifier", features = ["cpi"] }

[lints]
workspace = true
