[package]
name = "tidex6-wusdc-pool"
description = "tidex6 wUSDC verify-only pool (ADR-015): hides linkage over Token-2022 CT wUSDC. Proves membership + burns nullifier; moves no asset (relayer moves wUSDC). Reuses 5-input withdraw VK."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "tidex6_wusdc_pool"

[features]
default = []
# Собирает ВТОРОЙ инстанс пула под другим program-id (для wUSDT и др.
# активов): изоляция pool/nullifier/memo PDA — они program-scoped.
wusdt = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
solana-poseidon = { workspace = true }
groth16-solana = { workspace = true }
# bytemuck is pulled in by the `#[account(zero_copy)]` macro expansion
# so the PoolState struct can implement Pod + Zeroable. Anchor does
# not re-export it at the path the macro generates, so we depend on
# it directly.
bytemuck = { version = "1", features = ["derive"] }
# On-chain security.txt — tells the world how to contact the
# developer if a vulnerability is found. Shows as a green checkmark
# on Solscan program pages.
solana-security-txt = "1.1"

[lints]
workspace = true

[package.metadata.cargo-machete]
# bytemuck is pulled in by Anchor's `#[account(zero_copy)]` proc-macro
# expansion at crate::pool::PoolState. cargo-machete cannot see
# macro-generated references, so it reports bytemuck as unused. It
# is required for the PoolState layout; do not remove.
ignored = ["bytemuck"]
